--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,20 @@
 body {
   background-color: #121212 !important;
 }
+
+input { 
+  -webkit-appearance: none;
+  -moz-appearance: textfield;
+  appearance: none;
+
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  &::-moz-inner-spin-button {
+    -moz-appearance: none;
+    margin: 0;
+  }
+}
