--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,14 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #121212 !important;
+  min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 input { 
