--- a/src/global.css
+++ b/src/global.css
@@ -7,7 +7,6 @@ html, body {
 body {
   background-color: #121212 !important;
   min-height: 100vh;
-  width: 100vw;
   overflow-x: hidden;
 }
 
@@ -26,4 +25,10 @@ input {
     -moz-appearance: none;
     margin: 0;
   }
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: 'pointer',
 }
