--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,7 +1,20 @@
 .Header {
-  display: flex;
-  justify-content: space-between;
-  gap: 1rem;
-  align-items: center;
   padding-top: 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+
+  .content {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    align-items: center;
+
+
+    .logo {
+      cursor: pointer;
+    }
+  }
 }
