--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,10 +1,10 @@
 .Header {
-  padding-top: 20px;
+  padding: 20px 0;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-
+  background-color: #121212;
 
   .content {
     display: flex;
